   tar: --exclude '*.o' has no effect
   tar: Exiting with failure status due to previous errors

* --numeric-owner now affects private headers too.
This helps the output of 'tar' to be more deterministic.

* Fixed the --delay-directory-restore option

In some cases tar would restore the directory permissions too early,
causing subsequent link extractions in that directory to fail.


version 1.29 - Sergey Poznyakoff, 2016-05-16

* New options: --verbatim-files-from, --no-verbatim-files-from

The --verbatim-files-from option instructs tar to treat each line read
from a file list as a file name, even if it starts with a dash.

File lists are supplied with the --files-from (-T) option.  By
default, each line read from a file list is first stripped off the
leading and trailing whitespace and, if the result begins with a dash,
it is treated as tar command line option.

Use the --verbatim-files-from option to disable this special handling.
This facilitates the use of tar with file lists created automatically
(e.g. by find(1) command).

This option affects all --files-from options that occur after it in
the command line.  Its effect is reverted by the
--no-verbatim-files-from option.

* --null option reads file names verbatim

The --null option implies --verbatim-files-from.  I.e. each line
read from null-delimited file lists is treated as a file name.

This restores the documented behavior, which was broken in version
1.27.

* New options: --owner-map=FILE and --group-map=FILE

These two options provide fine-grained control over what user/group
names (or IDs) should be mapped when adding files to archive.

For both options, FILE is a plain text file with user or group
mappings.  Empty lines are ignored.  Comments are introduced with
# sign (unless quoted) and extend to the end of the corresponding
line.  Each non-empty line defines translation for a single UID (GID).
It must consist of two fields, delimited by any amount of whitespace:

     OLDNAME NEWNAME[:NEWID]
